Installing jeroendesloovere/vcard package

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "medkamdeveloper@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "jeroendesloovere/vcard": "^1.7"
+    }
 }
